--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
     <script src="js/Item.js" async></script>
     <script src="js/ceg.js" async></script>
+    <script src="js/User.js" async></script>
     
 </body>
 </html>
