added the behavior when item is selected to be purchased by the user

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class = "main-bg min-vh-100">
-        <div id = "login-bg" class = "d-none d-flex min-vh-100 col-12 justify-content-center align-items-center">
+        <div id = "login-bg" class = "d-flex min-vh-100 col-12 justify-content-center align-items-center">
             <div class = "login col-md-5 col-lg-4 pt-3 pb-4">
                 <h1 class = "title mb-3">Clicker Empire Game</h1>
                 <div class = "d-flex col-10 justify-content-center mb-3">
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <div id = "game-bg" class = "d-flex col-12 min-vh-100">
+        <div id = "game-bg" class = "d-none d-flex col-12 min-vh-100">
 
             <div id = "burger-bg" class = "col-4">
 
@@ -65,7 +65,7 @@
                     </div>
                 </div>
 
-                <div id = "item-list" class = "d-none item-list mt-3">
+                <div id = "item-list" class = "item-list mt-3">
                     <div id = "flip-machine" class="item">
                         <div class="item-info">
                             <div class="img-wrap">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <div class = "purchase mt-3">
+                <div id = "confirmation" class = "d-none purchase mt-3">
                     <div class = "description">
                         <div id = "basic-info">
                             <h1>House</h1>
