implemented the behavior that updates the state of the game every second

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div id = "right-div" class = "col-8">
 
-                <div class = "profile">
+                <div id = "profile" class = "profile">
                     <div class = "profile-card">
                         <p>Name:</p>
                         <p id = "name">John Stones</p>
