--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class = "col-10 d-flex justify-content-around">
                     <button id = "start-new" class = "col-4 login-btn mx-3">New</button>
-                    <button class = "col-4 login-btn mx-3">Login</button>
+                    <button id = "resume" class = "col-4 login-btn mx-3">Login</button>
                 </div>
             </div>
         </div>
