--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
                 <div id = "profile" class = "profile">
                     <div class = "profile-card">
                         <p>Name:</p>
-                        <p id = "name">John Stones</p>
+                        <p id = "name"></p>
                     </div>
 
                     <div class = "profile-card">
                         <p>Age:</p>
-                        <p id = "age">20</p>
+                        <p id = "age"></p>
                     </div>
 
                     <div class = "profile-card">
                         <p>Days:</p>
-                        <p id = "days">0 days</p>
+                        <p id = "days"></p>
                     </div>
 
-                    <div class = "profile-card">
+                    <div class = "profile-card flex-wrap">
                         <p>Balance:</p>
-                        <p id = "money">$0</p>
+                        <p id = "money"></p>
                     </div>
                 </div>
 
@@ -126,7 +126,6 @@
 
     <script src="js/Item.js" async></script>
     <script src="js/ceg.js" async></script>
-    <script src="js/User.js" async></script>
     
 </body>
 </html>
