--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         </div>
     </div>
 
-    <script src="js/Item.js" async></script>
-    <script src="js/ceg.js" async></script>
+    <script src="js/Item.js"></script>
+    <script src="js/ceg.js"></script>
     
 </body>
 </html>
